--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -12,24 +12,24 @@
 <!--<div class="animated fadeIn">-->
 <!--  <div class="row">-->
 <!--    <div class="col-sm-6 col-lg-3">-->
-<div class="card text-white bg-info">
-  <div class="card-body pb-0">
-    <button type="button" class="btn btn-transparent p-0 float-right">
-      <i class="icon-location-pin"></i>
-    </button>
-    <div>Vendas</div>
-    <div class="text-value">Total: R$0000</div>
-  </div>
-  <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-    <canvas baseChart class="chart"
-            [datasets]="lineChart2Data"
-            [labels]="lineChart2Labels"
-            [options]="lineChart2Options"
-            [colors]="lineChart2Colours"
-            [legend]="lineChart2Legend"
-            [chartType]="lineChart2Type"></canvas>
-  </div>
-</div>
+<!--<div class="card text-white bg-info">-->
+<!--  <div class="card-body pb-0">-->
+<!--    <button type="button" class="btn btn-transparent p-0 float-right">-->
+<!--      <i class="icon-location-pin"></i>-->
+<!--    </button>-->
+<!--    <div>Vendas</div>-->
+<!--    <div class="text-value">Total: R$0000</div>-->
+<!--  </div>-->
+<!--  <div class="chart-wrapper mt-3 mx-3" style="height:70px;">-->
+<!--    <canvas baseChart class="chart"-->
+<!--            [datasets]="lineChart2Data"-->
+<!--            [labels]="lineChart2Labels"-->
+<!--            [options]="lineChart2Options"-->
+<!--            [colors]="lineChart2Colours"-->
+<!--            [legend]="lineChart2Legend"-->
+<!--            [chartType]="lineChart2Type"></canvas>-->
+<!--  </div>-->
+<!--</div>-->
 <!--    </div>&lt;!&ndash;/.col&ndash;&gt;-->
 <!--    <div class="col-sm-6 col-lg-3">-->
 <!--      <div class="card text-white bg-primary">-->
