--- a/src/app/financeiro/consultar-pedido/consultar.pedido.component.html
+++ b/src/app/financeiro/consultar-pedido/consultar.pedido.component.html
@@ -8,6 +8,24 @@
 
                 <div class="row">
                     <div class="col-sm-10">
+                        <mat-form-field class="col-sm-2">
+                            <mat-label>Código Interno</mat-label>
+                            <input
+                                #name
+                                matInput
+                                type="number"
+                                formControlName="internalCode"
+                            >
+                        </mat-form-field>
+                        <mat-form-field class="col-sm-2">
+                            <mat-label>Descrição</mat-label>
+                            <input
+                                #name
+                                matInput
+                                type="number"
+                                formControlName="description"
+                            >
+                        </mat-form-field>
                         <mat-form-field class="col-sm-3">
                             <mat-label>Código de Referência</mat-label>
                             <input
@@ -17,11 +35,20 @@
                                 formControlName="referenceCode"
                             >
                         </mat-form-field>
+                        <mat-form-field class="col-sm-2">
+                            <mat-label>Código EAM</mat-label>
+                            <input
+                                #name
+                                matInput
+                                type="number"
+                                formControlName="EANCode"
+                            >
+                        </mat-form-field>
                     </div>
                     <div class="col-sm-2" style="padding:10px">
                         <button mat-raised-button
                                 style="background-color: rgb(255, 205, 55); color: black; height: 35px ; float: right"
-                                (click)="buscarPedidosComParametros()">Pesquisar
+                                (click)="findItensByParams()">Pesquisar
                         </button>
                     </div>
                 </div>
@@ -42,11 +69,11 @@
                     <td mat-cell *matCellDef="let element"> {{element.unityMeasure}} </td>
                 </ng-container>
                 <ng-container matColumnDef="referenceCode">
-                    <th mat-header-cell *matHeaderCellDef>Código de ReferÊncia</th>
+                    <th mat-header-cell *matHeaderCellDef>Código de Referência</th>
                     <td mat-cell *matCellDef="let element"> {{element.referenceCode}} </td>
                 </ng-container>
                 <ng-container matColumnDef="EANCode">
-                    <th mat-header-cell *matHeaderCellDef>Códico EAN</th>
+                    <th mat-header-cell *matHeaderCellDef>Código EAN</th>
                     <td mat-cell *matCellDef="let element"> {{element.EANCode}} </td>
                 </ng-container>
                 <ng-container matColumnDef="price">
